depends_compile_tests/tests/fail/derive/value/union.rs
use depends::derives::Value;

#[derive(Value)]
#[depends(unhashable)]
union Foo {
    bar: usize,
}

fn main() {}
