depends_compile_tests/tests/fail/derive/value/union.stderr
error: expected `struct`
 --> tests/fail/derive/value/union.rs:5:1
  |
5 | union Foo {
  | ^^^^^
